Minor updates, adding EARLS_HOSTNAME
- views/index.hbs, corrects a misspelling of maxiumum-scale with
maximum-scale. A fix for mobiles.
- earls.js, it binds with all local IPs using app.listen but setting
only default port. Added an EARLS_HOSTNAME with defaults = "". It binds
anyway with all local IPs.
- earls.js, changed PORT with EARLS_PORT for compatibility: PORT  and
HOSTNAME are commonly used on Unix, avoiding conflicts.
- earls.js, current release use HTTPS for tweets & accounts but HTTP
for avatar (profile_image_url). Using the profile_image_url_https it
solves most crash/errors when earls publish lots of URLs and avatars.
- README.md, updates for descriptions of EARLS_PORT and EARLS_HOSTNAME.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maxiumum-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/vendor/jquery.js"></script>
