added note about reload

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,7 +16,7 @@
     <header class="row">
       <div class="large-offset-1 large-11 large-centered columns text-center">
         <h1>{{track}} urls</h1>
-        <em>as mentioned in twitter</em>
+        <em>as mentioned in twitter ; reload for latest results</em>
         <hr>
       </div>
     </header>
