--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.js"></script>
     <script src="js/handlebars.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="socket.io/socket.io.js"></script>
     <script src="js/app.js"></script>
     <title>{{track}} urls</title>
   </head>
