added user name to recent

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -49,7 +49,7 @@
 
     <script id="update-template" type="text/x-handlebars-template">
       <div>
-        recent: <a href="\{{url}}">\{{title}}</a>
+        recent: <a href="\{{url}}">\{{title}}</a> by <a href="https://twitter.com/{{tweet.user.screen_name}}">\{{tweet.user.screen_name}}</a>
       </div>
     </script>
 
