--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,6 +8,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/handlebars.js"></script>
     <script src="socket.io/socket.io.js"></script>
+    <script src="js/stats.js"></script>
     <script src="js/app.js"></script>
     <title>{{track}} urls</title>
   </head>
